Fix minor spacing issue

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -18,7 +18,7 @@
 
 .logo {
     width: 254px;
-    z-index: 1;
+    z-index: 2;
 
     // --------- RESPONSIVENESS ---------
     @include xl {
@@ -82,6 +82,7 @@
         height: 100vh;
         padding: 15px;
         transition: all 0.3s ease-in-out;
+        z-index: 1;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 
         @include sm {
